@startuml

hide circle

note as G1
  ・テーブル名は単数形で統一する
  ・原則NOT NULL（例外は <<nullable>> で明示）
end note

entity media {
  *media_id : int <<PK>>
  --
  title : text
  created_at : datetime
  updated_at : datetime
}

entity content {
  *content_id : text <<PK>>
  --
  media_id : int <<FK>>
  position : int
  <<unique(media_id, position)>>
}

entity category {
  *category_id : int <<PK>>
  --
  name : text
  <<unique(name)>>
}

entity tag {
  *tag_id : int <<PK>>
  --
  category_id : int <<FK>>
  name : text
  <<unique(category_id, name)>>
}
note right
  レコードを削除することは基本的にない。
  メディアと紐づくタグが0件になっても
  再度利用される可能性があるため。
end note

entity media_tag {
  *media_id : int <<PK>> <<FK>>
  *tag_id : int <<PK>> <<FK>>
}

entity media_category {
  media_id : int <<FK>>
  category_id : int <<FK>>
  priority : int
  <<unique(media_id, category_id, priority)>>
}

media ||-u-|{ content
media ||--o{ media_tag
media ||--o{ media_category
tag ||--o{ media_tag
category ||--o{ media_category
category ||--o{ tag
@enduml
